feat: correct typographical errors in the translations of popular attractions

--- a/translations/en.json
+++ b/translations/en.json
@@ -37,7 +37,7 @@
       "terms-and-conditions": "Terms and Conditions",
       "privacy-policy": "Privacy Policy"
     },
-    "popularts-attractions": {
+    "populars-attractions": {
       "title": "Popular Attractions",
       "empty-message": "No attraction products found"
     },
