--- a/translations/es.json
+++ b/translations/es.json
@@ -37,7 +37,7 @@
       "terms-and-conditions": "Términos y condiciones",
       "privacy-policy": "Política de privacidad"
     },
-    "popularts-attractions": {
+    "populars-attractions": {
       "title": "Atracciones populares",
       "empty-message": "No se encontraron productos de atracciones"
     },
