feat: add code ESNNA link in footer component

--- a/translations/en.json
+++ b/translations/en.json
@@ -35,7 +35,8 @@
       "title": "Support",
       "contact-us": "Contact us",
       "terms-and-conditions": "Terms and Conditions",
-      "privacy-policy": "Privacy Policy"
+      "privacy-policy": "Privacy Policy",
+      "code-esnna": "ESNNA code"
     },
     "populars-attractions": {
       "title": "Popular Attractions",
