--- a/translations/es.json
+++ b/translations/es.json
@@ -35,7 +35,8 @@
       "title": "Soporte",
       "contact-us": "Contáctanos",
       "terms-and-conditions": "Términos y condiciones",
-      "privacy-policy": "Política de privacidad"
+      "privacy-policy": "Política de privacidad",
+      "code-esnna": "Codigo ESNNA"
     },
     "populars-attractions": {
       "title": "Atracciones populares",
